# auroria_etl_pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: extractor.py  interfaces.py  loader.py  schemas.py  transformer.py
tests/: test_pipeline.py
